<resources>

    <string name="app_name">saliz | سالیز</string>
    <string name="saliz">سالیز</string>
    <string name="company_name">سالن زیبایی سالیز</string>
    <string name="address">ماهشهر ، شهرک بعثت (ممکو) ، گلستان 5 ، آلفا 164</string>

    <string name="support_phone">09169501905</string>
    <string name="support_email">alimoghadam75@gmail.com</string>
    <string name="email">alimoghadam75@gmail.com</string>
    <string name="developer">علی مقدم</string>

    <string name="account">حساب کاربری</string>
    <string name="orders">سفارشات</string>
    <string name="gift">تخفیف ویژه برای روز های تعطیل</string>
    <string name="lorem">متن ساده برای نمایش آزمایشی</string>
    <string name="choose_dayHour">تایید روز و ساعت</string>
    <string name="choose_service">تایید خدمات</string>
    <string name="choose_final">تایید نهایی</string>
    <string name="itemNotFound">موردی یافت نشد</string>
    <string name="choose_hour">انتخاب ساعت</string>
    <string name="reserved">رزرو شد !</string>
    <string name="reservedForAdmin">رزرو شده</string>
    <string name="saliz_beautiful_salon">سالن زیبایی سالیز</string>

    <string name="status_pending">در انتظار تایید</string>
    <string name="status_denied">عدم موافقت</string>
    <string name="status_finalized">تایید شده</string>
    <string name="status_done">انجام شده</string>
    <string name="loginOrRegisterForReserve">برای رزرو نوبت وارد حساب کاربری شوید</string>
    <string name="login">ورود</string>
    <string name="register">ثبت نام</string>
    <string name="user_normal">کاربر عادی</string>
    <string name="can_reserve">قابل رزرو</string>
    <string name="change_time">تغییر زمان بندی</string>
    <string name="add_time">اضافه کردن روز و ساعت</string>
    <string name="_8_00">8:00</string>
    <string name="verify">تایید</string>
    <string name="map_direction">مسیریابی روی نقشه</string>
    <string name="delete">حذف</string>
    <string name="edit_info">تغییر اطلاعات</string>

    <string name="message_admin">سفارش جدید دارید</string>

    <!-- ERRORS -->
    <string name="error_connection">خطا در ارتباط با اینترنت</string>
    <string name="error_empty_body">خطا در سرور</string>
    <string name="error_fail">خطا در سمت سرور</string>
    <string name="error_unSuccess">خطا در دریافت اطلاعات</string>
    <string name="error_emptyHttpOK">عدم دریافت پاسخ از سرور</string>
    <string name="error_emptyItems">عدم دریافت آیتم ها</string>

    <!-- SUCCESS -->
    <string name="successfully">موفقیت آمیز بود</string>

    <string name="delete_banner">حذف بنر</string>

    <string name="try_again">تلاش مجدد</string>

    <string name="rules">قوانین و مقررات</string>
    <string name="sale">روش پرداخت</string>
    <string name="support">پشتیبانی ، ثبت شکایت ، انتقاد</string>

    <string name="rule1">* حضور مشتری سر ساعت و روز مشخص شده الزامی است</string>
    <string name="rule2">* حداقل 15 دقیقه قبل از نوبت در سالن حصور داشته باشید</string>
    <string name="sale1">پرداخت در محل انجام می شود</string>
</resources>
