<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alirnp.salizsalon.Views.Activities.ActivityRules">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/activity_rules_cardRule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin2x"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/standard_margin2x"
            android:orientation="vertical">

            <com.alirnp.salizsalon.CustomViews.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rules"
                app:fontCustom="iranSansBold" />

            <com.alirnp.salizsalon.CustomViews.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin2x"
                android:text="@string/rule1" />

            <com.alirnp.salizsalon.CustomViews.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin"
                android:text="@string/rule2" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/activity_rules_cardSale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin2x"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/activity_rules_cardRule">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/standard_margin2x"
            android:orientation="vertical">

            <com.alirnp.salizsalon.CustomViews.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sale"
                app:fontCustom="iranSansBold" />

            <com.alirnp.salizsalon.CustomViews.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin2x"
                android:text="@string/sale1" />


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin2x"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/activity_rules_cardSale">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/standard_margin2x"
            android:orientation="vertical">

            <com.alirnp.salizsalon.CustomViews.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/support"
                app:fontCustom="iranSansBold" />

            <com.alirnp.salizsalon.CustomViews.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin2x"
                android:text="@string/support_phone" />

            <com.alirnp.salizsalon.CustomViews.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin"
                android:text="@string/support_email" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
