<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_100"
    tools:context=".Views.Activities.AboutActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/activity_about_cardViewApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/standard_cardCornerRadius"
        app:cardElevation="@dimen/standard_cardElevation"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/standard_margin2x">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/activity_about_imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher_female_round" />

            <com.alirnp.salizsalon.CustomViews.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/standard_margin2x"
                android:layout_marginRight="@dimen/standard_margin2x"
                android:text="@string/company_name"
                app:layout_constraintBottom_toBottomOf="@id/activity_about_imageView"
                app:layout_constraintRight_toLeftOf="@id/activity_about_imageView"
                app:layout_constraintTop_toTopOf="@id/activity_about_imageView" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/activity_about_imageView_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                app:layout_constraintLeft_toLeftOf="@id/activity_about_imageView"
                app:layout_constraintRight_toRightOf="@id/activity_about_imageView"
                app:layout_constraintTop_toBottomOf="@id/activity_about_imageView"
                app:srcCompat="@drawable/ic_question" />

            <com.alirnp.salizsalon.CustomViews.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/standard_margin2x"
                android:layout_marginRight="@dimen/standard_margin2x"
                android:text="version : 1.0"
                app:layout_constraintRight_toLeftOf="@id/activity_about_imageView_version"
                app:layout_constraintTop_toTopOf="@id/activity_about_imageView_version" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/standard_cardCornerRadius"
        app:cardElevation="@dimen/standard_cardElevation"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@+id/activity_about_cardViewApp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_margin2x">


            <com.alirnp.salizsalon.CustomViews.MyTextView
                android:id="@+id/activity_about_developer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="توسعه دهنده"
                android:textSize="@dimen/normal_sp"
                app:fontCustom="iranSansBold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />

            <com.alirnp.salizsalon.CustomViews.MyTextView
                android:id="@+id/activity_about_developer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin2x"
                android:text="@string/developer"
                android:textSize="@dimen/large_sp"
                app:layout_constraintRight_toRightOf="@id/activity_about_developer"
                app:layout_constraintTop_toBottomOf="@id/activity_about_developer" />


            <com.alirnp.salizsalon.CustomViews.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin"
                android:text="@string/email"
                app:layout_constraintRight_toRightOf="@id/activity_about_developer"
                app:layout_constraintTop_toBottomOf="@id/activity_about_developer_name" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>